# CreatorOss-anna

./: .gitignore  README.md  anna.md  project.md
.github/workflows/: build-creatoros-planner-binary.yml
.hallmark/: log.json  preflight.json
examples/anna-app-creatoros-ai/: .gitignore  DEPLOY.md  README.md  app.json  manifest.json  package.json  tokens.css
examples/anna-app-creatoros-ai/bundle/: anna-tool-ids.js  app.js  index.html  style.css  tokens.css
examples/anna-app-creatoros-ai/executas/creatoros-planner-python/: README.md  creatoros_planner_plugin.py  executa.json  package_binary.sh  pyproject.toml
examples/anna-app-creatoros-ai/tests/: smoke.mjs
