[project]
name = "tool-nikku696969-creatoros-planner-vhsarfsp"
version = "0.1.1"
description = "CreatorOS AI planner Executa for Anna App local development"
requires-python = ">=3.10"
authors = [{ name = "CreatorOS AI" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
tool-nikku696969-creatoros-planner-vhsarfsp = "creatoros_planner_plugin:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["creatoros_planner_plugin.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
